<resources>
    <string name="app_name">Flight Search</string>
    <string name="select_departure_city">Выберите город вылета</string>
    <string name="select_arrival_city">Выберите город прилета</string>
    <string name="departure_date_hint">Выберите дату вылета</string>
    <string name="arrival_date_hint">Выберите дату прилета</string>
    <string name="adults_hint">Взрослые</string>
    <string name="children_hint">Дети</string>
    <string name="infants_hint">Младенцы</string>
    <string name="search_button_text">Искать</string>
</resources>