<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <Spinner
            android:id="@+id/departureCity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:prompt="@string/select_departure_city"
            android:entries="@array/cities_array"/>

        <Spinner
            android:id="@+id/arrivalCity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:prompt="@string/select_arrival_city"
            android:entries="@array/cities_array"/>
    </LinearLayout>

    <!-- Горизонтальный LinearLayout для следующих двух EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/departureDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/departure_date_hint"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <EditText
            android:id="@+id/arrivalDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/arrival_date_hint"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </LinearLayout>

    <!-- Текстовые поля для числа пассажиров -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/adultsNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/adults_hint"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/childrenNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/children_hint"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/infantsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/infants_hint"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>



    <!-- Кнопка поиска -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text"
        android:layout_gravity="center" />

</LinearLayout>
